--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       background-attachment: fixed;
       color: #4a4a4a;
     }
+
     .container {
       max-width: 950px;
       margin: 3rem auto;
@@ -24,64 +25,49 @@
       border-radius: 25px;
       padding: 2rem;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1s ease-in-out;
+      position: relative;
     }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
     h1 {
       text-align: center;
       color: #ff7b9c;
       font-size: 2.2rem;
+      margin-bottom: 1.5rem;
     }
+
     .chart-wrapper {
       width: 100%;
       height: 300px;
       background: #fff;
       border-radius: 15px;
       padding: 1rem;
-      margin-bottom: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      box-sizing: border-box;
     }
+
     .chart-wrapper canvas {
       width: 100% !important;
       height: 100% !important;
     }
+
     .anim-character {
       display: block;
-      margin: 0 auto 2rem;
+      margin: 20px auto;
       width: 180px;
       animation: float 3s ease-in-out infinite;
     }
+
     @keyframes float {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
     }
-    label { display: block; margin-top: 1rem; font-weight: 600; color: #b85d8c; }
-    input { width: 100%; padding: 0.6rem; border: 1px solid #fbcfd9; border-radius: 14px; background-color: #fff0f6; font-size: 1rem; }
-    button {
-      margin-top: 1rem;
-      background-color: #ffb3ab;
-      border: none;
-      padding: 0.6rem 1.4rem;
-      border-radius: 20px;
-      font-weight: bold;
-      color: #fff;
-      cursor: pointer;
-    }
-    button:hover { background-color: #ffcad4; }
-    table {
-      width: 100%;
-      margin-top: 2rem;
-      border-collapse: collapse;
-      background-color: #fffafc;
-      border-radius: 15px;
-      overflow: hidden;
-    }
-    th, td {
-      padding: 0.9rem;
-      text-align: center;
-      border-bottom: 1px solid #f3d6e0;
-      font-size: 0.95rem;
-      white-space: nowrap;
-    }
-    th { background-color: #ffd4e3; color: #7c3a54; }
-    tr.due-soon { background-color: #ffe5e5 !important; }
+
     .popup {
       display: none;
       position: fixed;
@@ -90,47 +76,137 @@
       background: rgba(0,0,0,0.6);
       justify-content: center;
       align-items: center;
-      z-index: 9999;
+      z-index: 99999;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
     }
-    .popup img {
-      max-width: 300px;
-      border-radius: 10px;
+
+    .popup.show {
+      display: flex;
+      opacity: 1;
     }
-    .popup.show { display: flex; }
-    .summary-box {
+
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: 600;
+      color: #b85d8c;
+    }
+
+    input {
+      width: 100%;
+      padding: 0.6rem;
+      border: 1px solid #fbcfd9;
+      border-radius: 14px;
+      margin-top: 0.3rem;
+      font-size: 1rem;
+      background-color: #fff0f6;
+      transition: all 0.3s ease;
+      box-shadow: inset 0 1px 2px rgba(255, 180, 200, 0.3);
+    }
+
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 8px #ffaec8;
+      background-color: #ffe5ec;
+    }
+
+    button {
+      position: relative;
       margin-top: 1.5rem;
-      background-color: #ffeef3;
-      border-radius: 15px;
-      padding: 1rem 1.5rem;
-      line-height: 1.8;
-      font-size: 0.95rem;
-    }
-    .summary-box span { font-weight: bold; }
-    .summary-box .next-interest { color: green; }
-    .btn-interest {
-      background-color: #c6f5d7;
-      color: #245d3c;
-      font-weight: bold;
-      padding: 0.4rem 1rem;
-      border-radius: 16px;
+      background-color: #ffb3ab;
       border: none;
+      padding: 0.8rem 1.8rem;
+      border-radius: 20px;
+      font-weight: bold;
       cursor: pointer;
+      color: #fff;
+      transition: all 0.2s ease-in-out;
+      font-size: 1rem;
+      margin-right: 0.5rem;
+      box-shadow: 0 6px #f18d94;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      background-color: #ffcad4;
+      box-shadow: 0 6px #f5a5ae;
+    }
+
+    button:active {
+      transform: translateY(4px);
+      box-shadow: 0 2px #e28a8a;
+    }
+
+    table {
+      margin-top: 2rem;
+      width: 100%;
+      border-collapse: collapse;
+      background-color: #fffafc;
+      border-radius: 15px;
+      overflow: hidden;
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    th, td {
+      padding: 0.9rem;
+      text-align: center;
+      border-bottom: 1px solid #f3d6e0;
+      font-size: 0.95rem;
+      white-space: nowrap;
+    }
+
+    th {
+      background-color: #ffd4e3;
+      color: #7c3a54;
+    }
+
+    tr:last-child td {
+      border-bottom: none;
+    }
+
+    .due-soon {
+      background-color: #ffcccc !important;
+    }
+
+    tfoot td {
+      background-color: #fff5f8;
+      font-weight: bold;
+      font-size: 0.9rem;
+      color: #4a4a4a;
+      padding-top: 1rem;
+    }
+
+    .total-interest {
+      color: green;
+      font-weight: bold;
+    }
+
+    .paid-button {
+      background-color: #d48cb2;
+      color: white;
+      border-radius: 14px;
+      padding: 0.4rem 0.8rem;
+      font-size: 0.8rem;
+      margin-left: 0.5rem;
+    }
+
+    .paid-button:hover {
+      background-color: #e3a5c8;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+    <div class="container">
     <h1>🧸 บัญชีเงินกู้ ยู่ยี่ 💗</h1>
 
     <div class="chart-wrapper">
       <canvas id="loanChart"></canvas>
     </div>
 
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif"
-         alt="คนใส่แว่นถือแฟ้ม"
-         class="anim-character" />
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif" alt="คนใส่แว่นถือแฟ้ม" class="anim-character" />
 
-    <!-- ฟอร์มเพิ่มลูกหนี้ -->
     <form id="loanForm">
       <label>ชื่อ</label>
       <input type="text" id="name" required />
@@ -141,9 +217,10 @@
       <label>วันที่เริ่มยืม</label>
       <input type="date" id="startDate" required />
       <button type="submit">➕ เพิ่มลูกหนี้</button>
+      <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
+      <input type="file" id="uploadFile" accept=".json" onchange="uploadData(event)" style="display:inline-block;margin-top:1rem" />
     </form>
 
-    <!-- ตารางลูกหนี้ -->
     <table id="summaryTable">
       <thead>
         <tr>
@@ -154,152 +231,227 @@
           <th>วันที่ผ่านมา</th>
           <th>ดอกเบี้ยสะสม</th>
           <th>ดอกเบี้ยเดือนหน้า</th>
-          <th>ครบกำหนด</th>
+          <th>ครบกำหนดถัดไป</th>
           <th>คืนเงินต้น</th>
-          <th>จ่ายดอก</th>
+          <th>จ่ายดอกแล้ว</th>
           <th>ลบ</th>
         </tr>
       </thead>
       <tbody></tbody>
+      <tfoot>
+        <tr><td colspan="11" id="summaryFooter">—</td></tr>
+      </tfoot>
     </table>
+  </div>
 
-    <!-- รายงานสรุป -->
-    <div class="summary-box" id="summaryBox"></div>
-
-    <!-- Pop-up -->
-    <div class="popup" id="popup">
-      <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif" />
-    </div>
+  <div class="popup" id="popup">
+    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif" alt="popup">
   </div>
 
   <script>
-    let loans = JSON.parse(localStorage.getItem("loans") || "[]");
+let loans = JSON.parse(localStorage.getItem('loans') || '[]');
 
-    function formatDate(dateStr) {
-      const d = new Date(dateStr);
-      return d.toLocaleDateString("th-TH");
+function formatDate(dateStr) {
+  const d = new Date(dateStr);
+  return d.toLocaleDateString('th-TH');
+}
+
+function getTotalPaid(loan) {
+  return (loan.repayments || []).reduce((sum, r) => sum + parseFloat(r.amount), 0);
+}
+
+function updateChart(data) {
+  const ctx = document.getElementById('loanChart').getContext('2d');
+  const maxValue = Math.max(...data.map(l => l.remaining));
+  if (window.loanChart) window.loanChart.destroy();
+  window.loanChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+      labels: data.map(l => l.name),
+      datasets: [{
+        label: 'เงินต้นคงเหลือ (บาท)',
+        data: data.map(l => l.remaining),
+        backgroundColor: data.map(l => {
+          const intensity = Math.round((l.remaining / maxValue) * 255);
+          return `rgba(255, ${180 - intensity / 4}, ${180 - intensity / 4}, 1)`;
+        }),
+        borderRadius: 10
+      }]
+    },
+    options: {
+      responsive: true,
+      maintainAspectRatio: false,
+      plugins: { legend: { display: false } },
+      scales: { y: { beginAtZero: true } }
+    }
+  });
+}
+
+function calcSummary() {
+  const tableBody = document.querySelector('#summaryTable tbody');
+  if (!tableBody) return;
+  tableBody.innerHTML = '';
+  const now = new Date();
+  const chartData = [];
+  let totalPrincipal = 0, totalAccumulated = 0, totalNextMonth = 0;
+
+  loans.forEach((loan, index) => {
+    const totalPaid = getTotalPaid(loan);
+    const netPrincipal = loan.principal - totalPaid;
+    const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+    const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+    const accumulated = parseFloat((interestPerDay * daysPassed).toFixed(2));
+    const nextMonth = parseFloat((netPrincipal * loan.rate / 100).toFixed(2));
+    const nextDue = new Date(loan.startDate);
+    nextDue.setMonth(nextDue.getMonth() + 1);
+
+    const row = document.createElement('tr');
+    if (!loan.interestPaid && (now > nextDue || (nextDue - now) / (1000 * 60 * 60 * 24) < 7)) {
+      row.classList.add('due-soon');
     }
 
-    function showPopup() {
-      const popup = document.getElementById("popup");
-      popup.classList.add("show");
-      setTimeout(() => popup.classList.remove("show"), 2000);
-    }
+    row.innerHTML = `
+      <td>${loan.name}</td>
+      <td>${netPrincipal.toLocaleString()}</td>
+      <td>${loan.rate}%</td>
+      <td>${formatDate(loan.startDate)}</td>
+      <td>${daysPassed} วัน</td>
+      <td>${accumulated.toLocaleString()}</td>
+      <td class="total-interest">${nextMonth.toLocaleString()}</td>
+      <td>${formatDate(nextDue)}</td>
+      <td><button onclick="addRepayment(${index})">➕</button></td>
+      <td><button class="paid-button" onclick="markInterestPaid(${index})">✔️</button></td>
+      <td><button onclick="deleteLoan(${index})">🗑️</button></td>
+    `;
+    tableBody.appendChild(row);
 
-    function updateChart(data) {
-      const ctx = document.getElementById("loanChart").getContext("2d");
-      if (window.loanChart) window.loanChart.destroy();
+    chartData.push({ name: loan.name, remaining: netPrincipal });
+    totalPrincipal += netPrincipal;
+    totalAccumulated += accumulated;
+    totalNextMonth += nextMonth;
+  });
 
-      const maxAmount = Math.max(...data.map(l => l.amount));
-      const baseColor = 'rgba(255, 155, 180,';
+  const footer = document.getElementById('summaryFooter');
+  footer.innerHTML = `
+    เงินต้นคงเหลือรวม: ${totalPrincipal.toLocaleString()} บาท<br>
+    ดอกเบี้ยสะสม: ${totalAccumulated.toLocaleString()} บาท<br>
+    <span class="total-interest">ดอกเบี้ยเดือนหน้า: ${totalNextMonth.toLocaleString()} บาท</span>
+  `;
 
-      window.loanChart = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: data.map(l => l.name),
-          datasets: [{
-            label: "เงินต้นคงเหลือ",
-            data: data.map(l => l.amount),
-            backgroundColor: data.map(l => `${baseColor}${(0.3 + 0.7 * (l.amount / maxAmount)).toFixed(2)})`)
-          }]
-        },
-        options: {
-          responsive: true,
-          plugins: { legend: { display: false } },
-          scales: { y: { beginAtZero: true } }
-        }
-      });
-    }
+  if (chartData.length > 0) updateChart(chartData);
+  else if (window.loanChart) window.loanChart.destroy();
+}
 
-    function calcSummary() {
-      const now = new Date();
-      const tbody = document.querySelector("#summaryTable tbody");
-      tbody.innerHTML = "";
-      let totalRemain = 0, totalAcc = 0, totalNext = 0;
-      const chartData = [];
+function addRepayment(index) {
+  const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
+  if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
+    alert('กรุณากรอกจำนวนที่ถูกต้อง');
+    return;
+  }
+  if (!loans[index].repayments) loans[index].repayments = [];
+  loans[index].repayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
+  localStorage.setItem('loans', JSON.stringify(loans));
+  calcSummary();
+}
 
-      loans.forEach((loan, i) => {
-        const paid = loan.paid || 0;
-        const remain = loan.principal - paid;
-        const days = Math.floor((now - new Date(loan.start)) / (1000 * 60 * 60 * 24));
-        const daily = (remain * loan.rate / 100) / 30;
-        const acc = +(daily * days).toFixed(2);
-        const next = +(remain * loan.rate / 100).toFixed(2);
-        const dueDate = new Date(loan.start);
-        dueDate.setMonth(dueDate.getMonth() + 1);
+function markInterestPaid(index) {
+  loans[index].interestPaid = true;
+  localStorage.setItem('loans', JSON.stringify(loans));
+  calcSummary();
+}
 
-        totalRemain += remain;
-        totalAcc += acc;
-        totalNext += next;
+document.getElementById('loanForm').addEventListener('submit', function(e) {
+  e.preventDefault();
+  const newLoan = {
+    name: document.getElementById('name').value,
+    principal: parseFloat(document.getElementById('principal').value),
+    rate: parseFloat(document.getElementById('rate').value),
+    startDate: document.getElementById('startDate').value,
+    repayments: [],
+    interestPaid: false
+  };
+  loans.push(newLoan);
+  localStorage.setItem('loans', JSON.stringify(loans));
+  e.target.reset();
+  calcSummary();
+  showPopup();
+});
 
-        const row = document.createElement("tr");
-        if (!loan.interestPaid && now > dueDate) row.classList.add("due-soon");
+function showPopup() {
+  const popup = document.getElementById('popup');
+  if (!popup) return;
+  popup.style.display = 'flex';
+  requestAnimationFrame(() => {
+    popup.classList.add('show');
+  });
+  setTimeout(() => {
+    popup.classList.remove('show');
+    setTimeout(() => {
+      popup.style.display = 'none';
+    }, 300);
+  }, 2000);
+}
 
-        row.innerHTML = `
-          <td>${loan.name}</td>
-          <td>${remain.toLocaleString()}</td>
-          <td>${loan.rate}%</td>
-          <td>${formatDate(loan.start)}</td>
-          <td>${days} วัน</td>
-          <td>${acc.toLocaleString()}</td>
-          <td>${next.toLocaleString()}</td>
-          <td>${formatDate(dueDate)}</td>
-          <td><button onclick="payPrincipal(${i})">➕</button></td>
-          <td><button class="btn-interest" onclick="markInterestPaid(${i})">✔️</button></td>
-          <td><button onclick="deleteLoan(${i})">🗑️</button></td>
-        `;
-        tbody.appendChild(row);
-
-        chartData.push({ name: loan.name, amount: remain });
-      });
-
-      updateChart(chartData);
-
-      document.getElementById("summaryBox").innerHTML = `
-        <div><span>เงินต้นคงเหลือรวม:</span> ${totalRemain.toLocaleString()} บาท</div>
-        <div><span>ดอกเบี้ยสะสม:</span> ${totalAcc.toLocaleString()} บาท</div>
-        <div><span class="next-interest">ดอกเบี้ยเดือนหน้า:</span> ${totalNext.toLocaleString()} บาท</div>
-      `;
-    }
-
-    function markInterestPaid(i) {
-      loans[i].interestPaid = true;
-      localStorage.setItem("loans", JSON.stringify(loans));
-      calcSummary();
-    }
-
-    function payPrincipal(i) {
-      const amount = +prompt("ใส่จำนวนที่คืน:");
-      if (!amount || isNaN(amount)) return;
-      loans[i].paid = (loans[i].paid || 0) + amount;
-      localStorage.setItem("loans", JSON.stringify(loans));
-      calcSummary();
-    }
-
-    function deleteLoan(i) {
-      if (confirm("ลบลูกหนี้นี้จริงหรือ?")) {
-        loans.splice(i, 1);
-        localStorage.setItem("loans", JSON.stringify(loans));
-        calcSummary();
-      }
-    }
-
-    document.getElementById("loanForm").addEventListener("submit", e => {
-      e.preventDefault();
-      const name = document.getElementById("name").value;
-      const principal = +document.getElementById("principal").value;
-      const rate = +document.getElementById("rate").value;
-      const start = document.getElementById("startDate").value;
-
-      loans.push({ name, principal, rate, start, paid: 0, interestPaid: false });
-      localStorage.setItem("loans", JSON.stringify(loans));
-      showPopup();
-      e.target.reset();
-      calcSummary();
-    });
-
-    // run once on load
+function deleteLoan(index) {
+  if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
+    loans.splice(index, 1);
+    localStorage.setItem('loans', JSON.stringify(loans));
     calcSummary();
-  </script>
+  }
+}
+
+function downloadExcel() {
+  const wb = XLSX.utils.book_new();
+  const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
+  const now = new Date();
+
+  loans.forEach(loan => {
+    const totalPaid = getTotalPaid(loan);
+    const netPrincipal = loan.principal - totalPaid;
+    const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
+    const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
+    const accumulated = (interestPerDay * daysPassed).toFixed(2);
+    const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
+    const nextDue = new Date(loan.startDate);
+    nextDue.setMonth(nextDue.getMonth() + 1);
+
+    wsData.push([
+      loan.name,
+      netPrincipal,
+      loan.rate + '%',
+      formatDate(loan.startDate),
+      `${daysPassed} วัน`,
+      parseFloat(accumulated),
+      parseFloat(nextMonth),
+      formatDate(nextDue.toISOString())
+    ]);
+  });
+
+  const ws = XLSX.utils.aoa_to_sheet(wsData);
+  XLSX.utils.book_append_sheet(wb, ws, 'Loan Summary');
+  XLSX.writeFile(wb, 'loan_summary.xlsx');
+}
+
+function uploadData(event) {
+  const file = event.target.files[0];
+  if (!file) return;
+  const reader = new FileReader();
+  reader.onload = function(e) {
+    try {
+      const newData = JSON.parse(e.target.result);
+      if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
+      loans = newData;
+      localStorage.setItem('loans', JSON.stringify(loans));
+      calcSummary();
+      alert('นำเข้าข้อมูลสำเร็จ');
+    } catch (err) {
+      alert('เกิดข้อผิดพลาดในการอ่านไฟล์: ' + err);
+    }
+  };
+  reader.readAsText(file);
+}
+
+calcSummary();
+</script>
 </body>
 </html>
