--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
     label { display: block; margin-top: 1rem; font-weight: 600; color: #b85d8c; }
     input { width: 100%; padding: 0.6rem; border: 1px solid #fbcfd9; border-radius: 14px; margin-top: 0.3rem; font-size: 1rem; background-color: #fff0f6; }
     input:focus { outline: none; box-shadow: 0 0 8px #ffaec8; background-color: #ffe5ec; }
-    button { margin-top: 1.5rem; background-color: #ffb3ab; border: none; padding: 0.8rem 1.8rem; border-radius: 20px; font-weight: bold; cursor: pointer; color: #fff; font-size: 1rem; margin-right: 0.5rem; box-shadow: 0 6px #f18d94; }
-    button:hover { transform: scale(1.05); background-color: #ffcad4; box-shadow: 0 6px #f5a5ae; }
+    button { margin-top: 0.5rem; background-color: #ffb3ab; border: none; padding: 0.5rem 1rem; border-radius: 14px; font-weight: bold; cursor: pointer; color: #fff; font-size: 0.9rem; margin-right: 0.3rem; box-shadow: 0 4px #f18d94; white-space: nowrap; }
+    button:hover { transform: scale(1.05); background-color: #ffcad4; box-shadow: 0 4px #f5a5ae; }
+    .paid { background-color: #ccc !important; color: #666 !important; box-shadow: none !important; }
+    .unpaid-interest { background-color: #ffcccc !important; }
+    .green-button { background-color: #a8e6cf !important; color: #004d40; }
     table { margin-top: 2rem; width: 100%; border-collapse: collapse; background-color: #fffafc; border-radius: 15px; overflow: hidden; }
     th, td { padding: 0.9rem; text-align: center; border-bottom: 1px solid #f3d6e0; font-size: 0.95rem; }
     th { background-color: #ffd4e3; color: #7c3a54; }
@@ -37,8 +40,8 @@
     <div class="chart-wrapper">
       <canvas id="loanChart"></canvas>
     </div>
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExczdzZWNzbDV1a3E0ZDNpbzRxNW93Y256Z2V6NjRxZjJ3MmppMjF6eSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/DZQTp76MfXhRGOBWok/giphy.gif" class="anim-character" />
 
+    <!-- แบบฟอร์ม เพิ่มลูกหนี้ -->
     <form id="loanForm">
       <label>ชื่อ</label>
       <input type="text" id="name" required />
@@ -49,10 +52,9 @@
       <label>วันที่เริ่มยืม</label>
       <input type="date" id="startDate" required />
       <button type="submit">➕ เพิ่มลูกหนี้</button>
-      <button type="button" onclick="downloadExcel()">📥 ดาวน์โหลด Excel</button>
-      <input type="file" id="uploadFile" accept=".json" onchange="uploadData(event)" style="display:inline-block;margin-top:1rem" />
     </form>
 
+    <!-- ตารางสรุปลูกหนี้ -->
     <table id="summaryTable">
       <thead>
         <tr>
@@ -64,25 +66,29 @@
           <th>ดอกเบี้ยสะสม</th>
           <th>ดอกเบี้ยเดือนหน้า</th>
           <th>ครบกำหนดถัดไป</th>
-          <th>คืนเงินต้น / จ่ายดอก</th>
+          <th>คืนเงินต้น</th>
+          <th>จ่ายดอก</th>
+          <th>History</th>
           <th>ลบ</th>
         </tr>
       </thead>
       <tbody></tbody>
       <tfoot>
         <tr>
-          <td colspan="10" id="summaryFooter">—</td>
+          <td colspan="12" id="summaryFooter">—</td>
         </tr>
       </tfoot>
     </table>
   </div>
 
+  <!-- Popup Animation -->
   <div class="popup" id="popup">
     <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMGVzMHFqZmVtMW5wZDJ3bjh1cm8xZXhkeGk2c2lxM2Jtc3hxbmFyaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/oDatDPoi5nTy2Ypcrw/giphy.gif">
   </div>
 
   <script>
     let loans = JSON.parse(localStorage.getItem('loans') || '[]');
+    let loanChart = null;
 
     function formatDate(dateStr) {
       const d = new Date(dateStr);
@@ -94,9 +100,69 @@
     }
 
     function markInterestPaid(index) {
+      const amount = prompt('กรุณากรอกจำนวนดอกเบี้ยที่จ่าย (บาท):');
+      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) return;
+      if (!loans[index].interestPayments) loans[index].interestPayments = [];
+      loans[index].interestPayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
       loans[index].lastInterestPaid = new Date().toISOString();
       localStorage.setItem('loans', JSON.stringify(loans));
       calcSummary();
+    }
+
+    function addRepayment(index) {
+      const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
+      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) return;
+      if (!loans[index].repayments) loans[index].repayments = [];
+      loans[index].repayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
+      localStorage.setItem('loans', JSON.stringify(loans));
+      calcSummary();
+    }
+
+    function showHistory(index) {
+      const loan = loans[index];
+      let msg = `ซ้อประวัติ "${loan.name}"\n\n`;
+      msg += `เงินต้นที่คืน: \n`;
+      loan.repayments?.forEach((r, i) => {
+        msg += `#${i+1} จำนวน ${r.amount.toLocaleString()} บาท วันที่ ${formatDate(r.date)}\n`;
+      });
+      msg += `\nดอกเบี้ยที่จ่าย:\n`;
+      loan.interestPayments?.forEach((p, i) => {
+        msg += `#${i+1} จำนวน ${p.amount.toLocaleString()} บาท วันที่ ${formatDate(p.date)}\n`;
+      });
+      alert(msg);
+    }
+
+    function deleteLoan(index) {
+      if (confirm('แน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
+        loans.splice(index, 1);
+        localStorage.setItem('loans', JSON.stringify(loans));
+        calcSummary();
+      }
+    }
+
+    function updateChart(data) {
+      const ctx = document.getElementById('loanChart').getContext('2d');
+      if (loanChart) loanChart.destroy();
+      loanChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: data.map(d => d.name),
+          datasets: [{
+            label: 'เงินต้นคงเหลือ',
+            data: data.map(d => d.remaining),
+            backgroundColor: 'rgba(255, 105, 135, 0.5)'
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: {
+            legend: { display: false }
+          },
+          scales: {
+            y: { beginAtZero: true }
+          }
+        }
+      });
     }
 
     function calcSummary() {
@@ -112,9 +178,7 @@
         let netPrincipal = loan.principal - totalPaid;
         if (netPrincipal < 0) netPrincipal = 0;
 
-        let daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        if (daysPassed < 0) daysPassed = 0;
-
+        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
         const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
         const accumulated = parseFloat((interestPerDay * daysPassed).toFixed(2));
         const nextMonth = parseFloat((netPrincipal * loan.rate / 100).toFixed(2));
@@ -124,15 +188,16 @@
         const lastDue = new Date(loanStartDate);
         lastDue.setMonth(loanStartDate.getMonth() + monthsSinceStart);
 
-        const paidInterest = loan.lastInterestPaid && !isNaN(Date.parse(loan.lastInterestPaid)) && new Date(loan.lastInterestPaid) >= lastDue;
-        const rowClass = netPrincipal > 0 && !paidInterest ? 'style="background-color:#ffcccc"' : '';
+        const paidInterest = loan.lastInterestPaid && new Date(loan.lastInterestPaid) >= lastDue;
+        const stillOwes = netPrincipal > 0;
+        const rowClass = stillOwes && !paidInterest ? 'unpaid-interest' : '';
 
         totalPrincipal += netPrincipal;
         totalAccumulated += accumulated;
         totalNextMonth += nextMonth;
 
         tableBody.innerHTML += `
-          <tr ${rowClass}>
+          <tr class="${rowClass}">
             <td>${loan.name}</td>
             <td>${netPrincipal.toLocaleString()}</td>
             <td>${loan.rate}%</td>
@@ -141,10 +206,9 @@
             <td>${accumulated.toLocaleString()}</td>
             <td>${nextMonth.toLocaleString()}</td>
             <td>${formatDate(lastDue)}</td>
-            <td>
-              <button onclick="addRepayment(${index})">➕</button>
-              <button onclick="markInterestPaid(${index})">💸</button>
-            </td>
+            <td><button onclick="addRepayment(${index})">➕ คืนเงินต้น</button></td>
+            <td><button onclick="markInterestPaid(${index})" class="${paidInterest ? 'paid' : 'green-button'}" ${paidInterest ? 'disabled' : ''}>${paidInterest ? 'จ่ายแล้ว' : 'จ่ายดอก'}</button></td>
+            <td><button onclick="showHistory(${index})">📜 History</button></td>
             <td><button onclick="deleteLoan(${index})">🗑️</button></td>
           </tr>`;
         chartData.push({ name: loan.name, remaining: netPrincipal });
@@ -156,98 +220,7 @@
         `🔮 ดอกเบี้ยเดือนหน้า: <span class="val-blue">${totalNextMonth.toLocaleString()} บาท</span>`;
 
       if (chartData.length > 0) updateChart(chartData);
-      else if (window.loanChart && typeof window.loanChart.destroy === 'function') window.loanChart.destroy();
-    }
-
-    function updateChart(data) {
-      const canvas = document.getElementById('loanChart');
-      if (!canvas) return;
-      const ctx = canvas.getContext('2d');
-      if (window.loanChart && typeof window.loanChart.destroy === 'function') {
-        window.loanChart.destroy();
-      }
-      const maxAmount = Math.max(...data.map(d => d.remaining));
-      window.loanChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: data.map(l => l.name),
-          datasets: [{
-            label: 'เงินต้นคงเหลือ (บาท)',
-            data: data.map(l => l.remaining),
-            backgroundColor: data.map(l => `rgba(255, 105, 135, ${Math.max(0.3, l.remaining / maxAmount)})`),
-            borderRadius: 10
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: { legend: { display: false } },
-          scales: { y: { beginAtZero: true } }
-        }
-      });
-    }
-
-    function addRepayment(index) {
-      const amount = prompt('กรุณากรอกจำนวนเงินต้นที่คืน (บาท):');
-      if (!amount || isNaN(amount) || parseFloat(amount) <= 0) {
-        alert('กรุณากรอกจำนวนที่ถูกต้อง'); return;
-      }
-      if (!loans[index].repayments) loans[index].repayments = [];
-      loans[index].repayments.push({ amount: parseFloat(amount), date: new Date().toISOString() });
-      localStorage.setItem('loans', JSON.stringify(loans));
-      calcSummary();
-    }
-
-    function deleteLoan(index) {
-      if (confirm('คุณแน่ใจว่าต้องการลบลูกหนี้คนนี้?')) {
-        loans.splice(index, 1);
-        localStorage.setItem('loans', JSON.stringify(loans));
-        calcSummary();
-      }
-    }
-
-    function downloadExcel() {
-      const wb = XLSX.utils.book_new();
-      const wsData = [['ชื่อ', 'เงินต้นคงเหลือ', 'ดอกเบี้ย/เดือน', 'วันที่เริ่ม', 'วันที่ผ่านมา', 'ดอกเบี้ยสะสม', 'ดอกเบี้ยเดือนหน้า', 'ครบกำหนดถัดไป']];
-      const now = new Date();
-      loans.forEach(loan => {
-        const totalPaid = getTotalPaid(loan);
-        const netPrincipal = loan.principal - totalPaid;
-        const daysPassed = Math.floor((now - new Date(loan.startDate)) / (1000 * 60 * 60 * 24));
-        const interestPerDay = (netPrincipal * loan.rate / 100) / 30;
-        const accumulated = (interestPerDay * daysPassed).toFixed(2);
-        const nextMonth = (netPrincipal * loan.rate / 100).toFixed(2);
-        const nextDue = new Date(loan.startDate); nextDue.setMonth(nextDue.getMonth() + 1);
-        wsData.push([loan.name, netPrincipal, loan.rate + '%', formatDate(loan.startDate), `${daysPassed} วัน`, parseFloat(accumulated), parseFloat(nextMonth), formatDate(nextDue)]);
-      });
-      XLSX.utils.book_append_sheet(wb, XLSX.utils.aoa_to_sheet(wsData), 'Loan Summary');
-      XLSX.writeFile(wb, 'loan_summary.xlsx');
-    }
-
-    function uploadData(event) {
-      const file = event.target.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = e => {
-        try {
-          const newData = JSON.parse(e.target.result);
-          if (!Array.isArray(newData)) throw 'รูปแบบข้อมูลไม่ถูกต้อง';
-          newData.forEach(item => {
-            if (typeof item.name !== 'string') throw 'ชื่อไม่ถูกต้อง';
-            if (typeof item.principal !== 'number' || item.principal < 0) throw 'เงินต้นไม่ถูกต้อง';
-            if (typeof item.rate !== 'number' || item.rate < 0) throw 'อัตราดอกเบี้ยไม่ถูกต้อง';
-            if (typeof item.startDate !== 'string' || isNaN(Date.parse(item.startDate))) throw 'วันที่เริ่มไม่ถูกต้อง';
-            if (!Array.isArray(item.repayments)) throw 'ประวัติการคืนเงินไม่ถูกต้อง';
-          });
-          loans = newData;
-          localStorage.setItem('loans', JSON.stringify(loans));
-          calcSummary();
-          alert('นำเข้าข้อมูลสำเร็จ');
-        } catch (err) {
-          alert('เกิดข้อผิดพลาด: ' + err);
-        }
-      };
-      reader.readAsText(file);
+      else if (loanChart && typeof loanChart.destroy === 'function') loanChart.destroy();
     }
 
     document.getElementById('loanForm').addEventListener('submit', e => {
@@ -257,24 +230,13 @@
         principal: parseFloat(document.getElementById('principal').value),
         rate: parseFloat(document.getElementById('rate').value),
         startDate: document.getElementById('startDate').value,
-        repayments: []
+        repayments: [],
+        interestPayments: []
       });
       localStorage.setItem('loans', JSON.stringify(loans));
       e.target.reset();
       calcSummary();
-      showPopup();
     });
-
-    function showPopup() {
-      const popup = document.getElementById('popup');
-      if (!popup) return;
-      popup.style.display = 'flex';
-      requestAnimationFrame(() => popup.classList.add('show'));
-      setTimeout(() => {
-        popup.classList.remove('show');
-        setTimeout(() => popup.style.display = 'none', 300);
-      }, 2000);
-    }
 
     calcSummary();
   </script>
